# gonka

./: .dockerignore  .env  .gitignore  .gitmodules  .ruff.toml  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  Tiltfile  add_founders_to_genesis.sh  bls-sigantures-plan.md  bls-signatures-flow.md  config_extract.sh  copy-to-gcp.sh  copy_proto.sh  deploy-test-net.sh  diff.txt  docker-compose-cloud-genesis.yml  docker-compose-cloud-join.yml  docker-compose-cloud-restart.yml  docker-compose-cloud-v2.yml  docker-compose-cloud.yml  docker-compose-genesis.yml  docker-compose-http-files.yml  docker-compose-local-genesis.yml  docker-compose-local.yml  docker-compose-sim.yml  docker-compose.yml  entrypoint.sh  fund_accounts.py  gentx-ceremony.md  init-prod-genesis.sh  init-prod-sim-2.sh  init-prod-sim.sh  launch-local-test-chain.sh  launch_chain.sh  launch_chain_genesis.sh  (+20 more)
.junie/: guidelines.md
.run/: build-w-config.run.xml
app/: sim_bench_test.go
bridge/: Dockerfile  Makefile  script.sh
bridge-service/: Dockerfile  start.sh
build-join/: config-genesis.env  config.env  get_config.sh  prepare-instance-genesis.sh  prepare-instance-join.sh
decentralized-api/: Dockerfile  DockerfileJoin  DockerfileNew  Makefile  config-docker.yaml  config-local.yaml  config-prod.yaml  config.yaml  cosmos-client.go  event_listener.go  event_listener_test.go  go.mod  go.sum  hashing.go  main.go  node_endpoints.go  server.go  server_test.go  validation.go  validation_test.go
deploy/: README.md  migrate-env.sh
deprecates-scripts/: init-docker.sh  prod-sim.sh
dev_notes/: build.md  ignite_cheat_sheet.md
docs/: consumer_setup.md  debugging_consensus_failure.md  join_chain.md  openapi.json  prepare_join_image.md  tokenomics.md  upgrades.md
gcp/: executor-config.yaml  requester-config.yaml  validator-config.yaml
genesis/: README.md  docker-compose.yml  genesis-draft-no-accounts.json  genesis-draft.json  genesis-overrides.json  genesis.json  init-docker-genesis.sh
inference/: go.mod
inference-chain/: Dockerfile  DockerfileGenesis  DockerfileJoin  DockerfileNode  Makefile  app_overrides.toml  denom.json  go.mod  go.sum  go.work  go.work.sum  prod_genesis_overrides.json  readme.md  test_genesis_overrides.json  tgbot_private_key.json  tmp
inference-chain/contracts/wrapped-token/: Cargo.toml
inference-chain/contracts/wrapped-token/artifacts/: checksums.txt  wrapped_token.wasm
inference-chain/contracts/wrapped-token/src/: contract.rs  error.rs  msg.rs  state.rs
local-test-net/: README.md  docker-compose-base.yml  docker-compose-local-genesis-with-explorer.yml  docker-compose-local-genesis.yml  docker-compose-local-tkms.yml  docker-compose-local-tmkms.yml  docker-compose-local.yml  docker-compose.bridge.yml  docker-compose.contracts.yml  docker-compose.explorer.yml  docker-compose.genesis.yml  docker-compose.join.yml  (+35 more)
(+1324 files in other folders)
