[tool.poetry]
name = "proof-of-work"
version = "0.1.0"
description = ""
authors = ["Gleb Morgachev <gleb.morgachev@productscience.ai>"]
readme = "README.md"
packages = [{include = "pow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.2.5"
numpy = "^2.1.1"
tqdm = "^4.66.5"
torch = "^2.4.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
numpy = "^2.1.1"
tqdm = "^4.66.5"
pytest = "^8.3.3"
ipywidgets = "^8.1.5"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
